--- a/chart/customer/templates/configmap.yaml
+++ b/chart/customer/templates/configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: {{ .Release.Name }}-{{ .Chart.Name }}-config
 data:
   jvm.options: |
-    -Dapplication.rest.client.CloudantClientService/mp-rest/url=http://{{ .Release.Name }}-{{ .Values.service.cloudantservicename }}:{{ .Values.cloudant.port }}
+    -Dapplication.rest.client.CloudantClientService/mp-rest/url=http://{{ .Values.couchdb.host }}:{{ .Values.couchdb.port }}
