--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -5,8 +5,8 @@ revisionHistoryLimit: 1
 image:
   #repository: registry.csplab.cloudns.cx/microprofile/customer-mp
   #repository: customer-mp
-  repository: ibmcase/customer-mp
-  tag: v4.0.0
+  repository: customer
+  tag: latest
   pullPolicy: IfNotPresent
   resources:
     requests:
