--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -5,7 +5,7 @@ revisionHistoryLimit: 1
 image:
   #repository: registry.csplab.cloudns.cx/microprofile/customer-mp
   #repository: customer-mp
-  repository: customer
+  repository: ibmcase/customer-mp
   tag: latest
   pullPolicy: IfNotPresent
   resources:
