--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ jobs:
       - docker run populate $GATEWAY $couchDbPort
       # Verify DB population
       #- curl -X POST http://localhost:5985/customers/_find -H 'Accept:*/*' -H 'Cache-Control: no-cache' -H 'Connection: keep-alive' -H 'Content-Type: application/json' -H 'Host: localhost:5985' -H 'Postman-Token: 9d2011df-3455-45c6-bd9c-f5437408fbf5,eabc1a64-f857-4e4c-96e0-8c3dcad10fea' -H 'User-Agent: PostmanRuntime/7.13.0' -H 'accept-encoding: gzip, deflate' -H 'cache-control: no-cache' -H 'content-length: 143' -d '{ "selector":{"username":"foo"},"fields":["username", "email", "firstName", "lastName", "imageUrl"],"limit":1}'
-      - sudo ./test_populate.sh
+      - ./test_populate.sh
       - cd -
       # Define a Keystore
       - bash scripts/keygen.sh
