Changed auth_health endpoint

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -10,4 +10,4 @@ database=customers
 application.rest.client.CloudantClientService/mp-rest/url=http://localhost:5985
 
 #Auth
-auth_health=https://auth-service:9443/health
+auth_health=https://localhost:9443/health
