--- a/pom.xml
+++ b/pom.xml
@@ -276,5 +276,19 @@
                 <version.liberty-runtime>RELEASE</version.liberty-runtime>
             </properties>
         </profile>
+        <profile>
+            <!-- Java 11 dependencies -->
+            <id>java-11</id>
+            <activation>
+                <jdk>[11,)</jdk>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>javax.annotation</groupId>
+                    <artifactId>javax.annotation-api</artifactId>
+                    <version>1.3.2</version>
+                </dependency>
+            </dependencies>
+      </profile>
     </profiles>
 </project>
