--- a/.travis.yml
+++ b/.travis.yml
@@ -113,7 +113,7 @@ jobs:
       # Wait for Cloudant to be ready
       - READY=$(kubectl get statefulsets customer-couchdb -o yaml | grep "readyReplicas" | awk '{print $2}')
       - echo $READY
-      - until [ -n "$READY" ] && [ ${READY} -ge 1 ]; do READY=$(kubectl get statefulsets customer-couchdb-couchdb -o yaml | grep "readyReplicas" | awk '{print $2}'); kubectl get deployments -o wide; echo "Waiting for cloudant to be ready"; sleep 10; done
+      - until [ -n "$READY" ] && [ ${READY} -ge 1 ]; do READY=$(kubectl get statefulsets customer-couchdb -o yaml | grep "readyReplicas" | awk '{print $2}'); kubectl get deployments -o wide; echo "Waiting for couchdb to be ready"; sleep 10; done
       # Wait for cust deployment to start accepting connections
       - sleep 35
       # Run auth API Test
