Added correct health endpoints

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -7,7 +7,7 @@ user=admin
 password=passw0rd
 
 database=customers
-application.rest.client.CloudantClientService/mp-rest/url=http://customer-couchdb:5985
+application.rest.client.CloudantClientService/mp-rest/url=http://customer-couchdb-svc-couchdb:5985
 
 #Auth
 auth_health=https://auth-service:9443/health
