--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -15,7 +15,7 @@ image:
 
 service:
   name: customer
-  cloudantservicename: cloudant-service
+  cloudantservicename: customer-couchdb-svc-couchdb
   type: NodePort
   servicePort: 9080
   servicePortHttps: 9443
