--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -77,13 +77,13 @@ spec:
             value: "https://{{ .Values.service.minikubeIp }}:{{ .Values.service.authKubePort }}/health"
         {{ else }}
           - name: jwksUri
-            value: "https://dining-quokka-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/jwk"
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/jwk"
           - name: jwksIssuer
-            value: "https://dining-quokka-{{ .Values.service.auth }}:9443/oidc/endpoint/OP"
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP"
           - name: administratorRealm
-            value: "user:https://dining-quokka-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/user"
+            value: "user:https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/oidc/endpoint/OP/user"
           - name: auth_health
-            value: "https://dining-quokka-{{ .Values.service.auth }}:9443/health"
+            value: "https://{{ .Release.Name }}-{{ .Values.service.auth }}:9443/health"
         {{ end }}
           - name: host
             value: "{{ .Values.service.cloudantservicename }}"
