Added most istio info. Working on couchDB sidecar injection disablement

--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -62,4 +62,37 @@ persistence:
   #storageClass: "-"
   accessMode: ReadWriteOnce
 
+labels:
+  app: customer
+  version: v1
+  tier: backend
+  implementation: microprofile
+
+global:
+  istio:
+    enabled: false
+    gateway: 
+    name: customer-gateway
+
+istio:
+  enabled: true
+  # ISTIO_MUTUAL, SIMPLE, DISABLE
+  # mTLS: ISTIO_MUTUAL
+  mTLS: SIMPLE
+  # LEAST_CONN, ROUND_ROBIN
+  loadBalancer: LEAST_CONN
+  gateway:
+    enabled: false
+    name: customer-gateway
+    hosts:
+      - "customer.bluecompute.com"
+    TLS:
+      enabled: false
+      # SIMPLE, MUTUAL
+      mode: SIMPLE
+      httpsRedirect: true
+      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
+      privateKey: /etc/istio/ingressgateway-certs/tls.key
+      caCertificates: /etc/istio/ingressgateway-ca-certs/ca-chain.cert.pem
+
 travis: false
