Disabled sidecar injection for the load_data job

--- a/chart/customer/templates/load_data.yaml
+++ b/chart/customer/templates/load_data.yaml
@@ -4,6 +4,9 @@ metadata:
   name: "{{ .Release.Name }}-populate"
 spec:
   template:
+      annotations:
+        sidecar.istio.io/inject: "false"
+  template:
     spec:
       containers:
       - name: populate
