--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -14,7 +14,7 @@ image:
 
 service:
   name: customer
-  dbService: customer-svc-couchdb
+  dbService: customer-couchdb-svc-couchdb
   type: NodePort
   servicePort: 9080
   servicePortHttps: 9443
@@ -39,15 +39,18 @@ jwt:
   id: myMpJwt
 
 couchdb:
-  host: customer-svc-couchdb
-  protocol: http
-  port: 5984
-  existingSecret:
+  clusterSize: 1
+  fullnameOverride: customer-couchdb
+  host: customer-couchdb-svc-couchdb
   adminUsername: admin
   adminPassword: passw0rd
   database: customers
+  port: 5985
   # Used when using Istio
-  headless: customer-couchdb-couchdb
+  # headless: customer-couchdb-couchdb
+  # service:
+  #   annotations:
+  #     sidecar.istio.io/inject: "false"
 
 ## Persist data to a persistent volume
 persistence:
@@ -75,7 +78,7 @@ global:
     name: customer-gateway
 
 istio:
-  enabled: true
+  enabled: false
   # ISTIO_MUTUAL, SIMPLE, DISABLE
   # mTLS: ISTIO_MUTUAL
   mTLS: SIMPLE
