Switched readiness and health ports

--- a/chart/customer/templates/customer.yaml
+++ b/chart/customer/templates/customer.yaml
@@ -55,7 +55,7 @@ spec:
         imagePullPolicy: IfNotPresent
         readinessProbe:
           httpGet:
-            path: /health
+            path: /
             port: 9443
             scheme: HTTPS
           initialDelaySeconds: 60
@@ -63,10 +63,11 @@ spec:
           failureThreshold: 6
         livenessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 9443
             scheme: HTTPS
-          initialDelaySeconds: 60
+          initialDelaySeconds: 600
+          timeoutSeconds: 500
           periodSeconds: 10
           failureThreshold: 6
         env:
