Installing couchdb sepeartely on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,7 @@ jobs:
       # Run Kubernetes Job and run Auth (May not need keystore chart)
       - helm install --name keystore services-bc-mp/keystore
       - helm install --name auth services-bc-mp/auth
-      # - helm upgrade --install couchdb --version 0.2.2 --set fullnameOverride=customer --set service.externalPort=5984 --set createAdminSecret=true --set adminUsername=admin --set adminPassword=passw0rd --set clusterSize=1 --set persistentVolume.enabled=false incubator/couchdb
+      - helm upgrade --install couchdb --version 0.2.2 --set fullnameOverride=customer --set service.externalPort=5984 --set createAdminSecret=true --set adminUsername=admin --set adminPassword=passw0rd --set clusterSize=1 --set persistentVolume.enabled=false incubator/couchdb
       # Wait for CouchDB to be ready
       - sleep 25
       - MINIKUBE_IP=$(minikube ip)
