--- a/chart/customer/requirements.yaml
+++ b/chart/customer/requirements.yaml
@@ -1,4 +1,4 @@
-dependencies:
-  - name: couchdb
-    version: 0.2.2
-    repository: http://storage.googleapis.com/kubernetes-charts-incubator
+# dependencies:
+#   - name: couchdb
+#     version: 0.2.2
+#     repository: http://storage.googleapis.com/kubernetes-charts-incubator
