--- a/chart/customer/templates/istio_customer.yaml
+++ b/chart/customer/templates/istio_customer.yaml
@@ -39,18 +39,17 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: customer-vs
+  name: {{ .Release.Name }}-{{ .Values.service.name }}
 spec:
   hosts:
-  - "*"
-  gateways:
-  - customer-gateway
+    - "orders.bluecompute.com"
   http:
   - match:
-    - port: 80
+    - uri:
+      prefix: {{ .Values.ingress.path }}
     route:
     - destination:
-        host: {{ .Release.Name }}
+        host: {{ .Release.Name }}-{{ .Values.service.name }}.{{ .Release.Namespace }}.svc.cluster.local
         port:
-          number: 9080
+          number: {{ .Values.service.servicePort }}
 {{ end }}
