Commenting out istio section and modifying travis to wait for Couchdb

--- a/chart/customer/templates/load_data.yaml
+++ b/chart/customer/templates/load_data.yaml
@@ -4,9 +4,10 @@ metadata:
   name: "{{ .Release.Name }}-populate"
 spec:
   template:
-    metadata:
-      annotations:
-        sidecar.istio.io/inject: "false"
+    # Used with istio
+    # metadata:
+    #   annotations:
+    #     sidecar.istio.io/inject: "false"
     spec:
       containers:
       - name: populate
