Building latest images in travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -67,7 +67,7 @@ jobs:
       - CHANGE_MINIKUBE_NONE_USER=true
       - RELEASE_NAME=cust
       - IMAGE_NAME=customer
-      - IMAGE_TAG=travis
+      - IMAGE_TAG=latest
       install:
       - true
       before_script:
