--- a/chart/customer/templates/istio_customer.yaml
+++ b/chart/customer/templates/istio_customer.yaml
@@ -42,7 +42,7 @@ metadata:
   name: {{ .Release.Name }}-{{ .Values.service.name }}
 spec:
   hosts:
-    - "orders.bluecompute.com"
+    - "customer.bluecompute.com"
   http:
   - match:
     - uri:
