--- a/chart/release/index.yaml
+++ b/chart/release/index.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 entries:
   customer:
   - apiVersion: v1
-    created: 2019-10-03T13:14:16.525064-05:00
+    created: "2019-11-05T10:18:57.469775-06:00"
     description: A Helm chart for Kubernetes
-    digest: 9c6fca7a5d9ec078abb10b029810c5ed5bdd0c79b36399827b4f8542342003a0
+    digest: adf21351b6687962856df80aaa71d2cc792b9fb82946091756cab9ed88e317eb
     home: https://github.com/ibm-cloud-architecture/refarch-cloudnative-kubernetes/tree/microprofile
     name: customer
     sources:
@@ -13,7 +13,7 @@ entries:
     - customer-0.1.1.tgz
     version: 0.1.1
   - apiVersion: v1
-    created: 2019-10-03T13:14:16.523631-05:00
+    created: "2019-11-05T10:18:57.468414-06:00"
     description: A Helm chart for Kubernetes
     digest: 5624b6ec9885c712fb91e0ba58eac9b2c54f096df2caa62e1c2eaffc0c5c2e8d
     home: https://github.com/ibm-cloud-architecture/refarch-cloudnative-kubernetes/tree/microprofile
@@ -24,7 +24,7 @@ entries:
     - customer-0.1.0.tgz
     version: 0.1.0
   - apiVersion: v1
-    created: 2019-10-03T13:14:16.519914-05:00
+    created: "2019-11-05T10:18:57.466552-06:00"
     description: A Helm chart for Kubernetes
     digest: 81307176e4559a2d2cb2187c2669472681375dde27aeb0071faa93122a21528c
     home: https://github.com/ibm-cloud-architecture/refarch-cloudnative-kubernetes/tree/microprofile
@@ -34,4 +34,4 @@ entries:
     urls:
     - customer-0.0.1.tgz
     version: 0.0.1
-generated: 2019-10-03T13:14:16.51699-05:00
+generated: "2019-11-05T10:18:57.462751-06:00"
