Telemetry and fallback configured for istio

--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -98,4 +98,16 @@ istio:
       privateKey: /etc/istio/ingressgateway-certs/tls.key
       caCertificates: /etc/istio/ingressgateway-ca-certs/ca-chain.cert.pem
 
+ingress:
+  enabled: true
+  hostname: #orders.bluecompute.com
+  path: /customer/rest
+  annotations:
+    ingress.bluemix.net/redirect-to-https: "True"
+  enableTLS: false 
+  TLS:
+  - secretName: orders.bluecompute.com
+    hosts:
+      - orders.bluecompute.com
+
 travis: false
