--- a/chart/customer/templates/istio_customer.yaml
+++ b/chart/customer/templates/istio_customer.yaml
@@ -61,7 +61,7 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.service.name }}
+  name: {{ .Release.Name }}-{{ .Values.service.name }}-config
 data:
   MP_Fault_Tolerance_NonFallback_Enabled: "false"
 {{ end }}
